[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Director.gd" type="Script" id=1]
[ext_resource path="res://GameObjects/SunSpawner.tscn" type="PackedScene" id=2]

[node name="Director" type="Node2D"]
script = ExtResource( 1 )

[node name="PregamePhase" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="GamePhase" type="Timer" parent="."]
wait_time = 3.0

[node name="SunSpawner" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -80 )

[connection signal="timeout" from="PregamePhase" to="." method="_on_PregamePhase_timeout"]
[connection signal="timeout" from="GamePhase" to="." method="_on_GamePhase_timeout"]
